<resources>
    <string name="app_name">Shareapy</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Confirm Password</string>
    <string name="welcome">Welcome to Shareapy!</string>
    <string name="login_guide">Sign in to continue</string>
    <string name="login_forgetPassword">Forgot your password?</string>
    <string name="login_buttonLogIn">Log in</string>
    <string name="login_buttonSignUp">Sign up</string>
    <string name="error_emptyFiled">This field can not be empty</string>
    <string name="error_differentString">Confirm password must be the same as Password</string>
    <string name="min_pass_requirement">Password must be at least 6 characters</string>
    <string name="signup_guide">Sign up</string>
    <string name="signup_login">Log in now</string>
    <string name="signup_ask_gender">What is your gender?</string>
    <string name="signup_ask_age">What is your age?</string>
    <string name="signup_ask_name">Please set your username</string>
    <string name="signup_ask_religious">Do you consider yourself to be religious?</string>
    <string name="signup_ask_spiritual">Do you consider yourself to be spiritual?</string>
    <string name="signup_ask_therapy_counseling">Have you ever been in therapy or counseling before?</string>
    <string name="signup_before_start">Before you start...</string>
    <string name="signup_gender_male">Male</string>
    <string name="signup_gender_female">Female</string>
    <string name="signup_gender_other">Other</string>
    <string name="signup_button_next">Next</string>
    <string name="login_ask_feeling">How are you feeling?</string>
    <string name="age">Age</string>
    <string name="btn_repost">REPOST</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="send">SEND</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="askEmail">Please input your email for us to send you the link for retrieving your password</string>
    <string name="card_view_img_content">mark</string>
    <string name="card_view_btn_register">Register</string>
    <string name="card_view_btn_join">Join</string>
    <string name="card_view_content">Image</string>
    <string name="card_view_demo_txt_title">New Mum\'s &amp; Mum\'s-to-be Support Group</string>
    <string name="card_view_demo_txt_time">12 March 2020, 8:00PM</string>
    <string name="card_view_demo_counselor">Magie</string>
    <string name="dialog_how_support_group">How helpful was this Support Group?</string>
    <string name="button_submit">Submit</string>
    <string name="card_view_how_feel">How do you feel ?</string>
    <string name="dialog_feedback">Please give us your feedback &lt;3</string>
    <string name="card_view_feel_hint">I feel …</string>
    <string name="switch_string_onlyme">Only me</string>
    <string name="button_post">Post</string>
    <string name="button_edit">Edit</string>
    <string name="button_support">Support</string>
    <string name="button_appreciate">Appreciate</string>
    <string name="button_supported">Supported</string>
    <string name="button_appreciated">Appreciated</string>
    <string name="img_title_privacy">Privacy</string>
    <string name="img_title_support">Support</string>
    <string name="img_title_appreciate">Appreciate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
