<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:layout_height="400dp">
    <TextView
        android:text="@string/dialog_how_support_group"
        android:layout_width="match_parent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <RatingBar
        android:layout_margin="10dp"
        android:id="@+id/rtbDialogRate"
        style="?android:attr/ratingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:isIndicator="false"
        android:layout_marginBottom="10dp"
        android:progressTint="#FFEB3B"
        android:rating="3.5"
        android:text="@string/card_view_btn_register"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/edtDialogFeedback"
        android:padding="5dp"
        android:importantForAutofill="no"
        android:hint="@string/dialog_feedback"
        android:inputType="textMultiLine"
        android:background="@drawable/custom_edittext_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:lines="5" />

    <Button
        android:id="@+id/btnDialogSubmit"
        android:background="@drawable/custom_button_login"
        android:layout_gravity="center"
        android:text="@string/button_submit"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>