<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignUpActivity">
    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="30sp"
            android:text="@string/signup_guide"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail_signUp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:background="@drawable/custom_edittext_shadow"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedtEmail_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword_signUp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:background="@drawable/custom_edittext_shadow"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedtPassword_signUp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRePassword_signUp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:background="@drawable/custom_edittext_shadow"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedtRePassword_signUp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/signup_login"
            android:textSize="20sp" />

        <Button
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/custom_button_login"
            android:text="@string/login_buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>