<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">

    <ProgressBar
        android:id="@+id/prg_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#427A5B"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/ly_logIn"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_signIn_Signinto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="30sp"
            android:text="@string/login_guide"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail_logIn"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:background="@drawable/custom_edittext_shadow"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedtEmail_logIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:layout_margin="5dp"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword_logIn"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:importantForAutofill="no"
            android:background="@drawable/custom_edittext_shadow"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedtPassword_logIn"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:importantForAutofill="no"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:text="@string/login_forgetPassword"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnLogIn_logIn"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_button_login"
            android:text="@string/login_buttonLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="logIn"/>
        <Button
            android:id="@+id/btnSignUp_logIn"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/custom_button_login"
            android:text="@string/login_buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>