<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:text="@string/forgotpass"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_above="@+id/txtQuestion"/>
    <TextView
        android:id="@+id/txtQuestion"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_above="@+id/lyAnswer"
        android:text="@string/askEmail"
        android:textSize="20sp"
        android:textStyle="normal"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/lyAnswer"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail_Forgotpass"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:background="@drawable/custom_edittext_shadow"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedtEmail_Forgotpass"
                android:layout_margin="5dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSend_ForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyAnswer"
        android:layout_marginTop="22dp"
        android:background="@drawable/custom_button_login"
        android:text="@string/send"
        android:textColor="#ffffff"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp" />

</RelativeLayout>