<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btnPre_therapy"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="pre"
        android:padding="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:text="@string/signup_before_start"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_above="@+id/txtQuestion"/>
    <TextView
        android:id="@+id/txtQuestion"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_above="@+id/lyAnswer"
        android:text="@string/signup_ask_therapy_counseling"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/lyAnswer"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/rdgTherapy"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/yes"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@drawable/custom_radiobutton_signup"
                android:button="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/no"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@drawable/custom_radiobutton_signup"
                android:button="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyAnswer"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="22dp">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationZ="10dp"
            android:id="@+id/pgb_signUp"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/btnSignUp_therapy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_login"
            android:text="@string/login_buttonSignUp"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>