<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btnPre_age"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="pre"
        android:padding="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:text="@string/signup_before_start"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_above="@+id/txtQuestion"/>
    <TextView
        android:id="@+id/txtQuestion"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_above="@+id/lyAnswer"
        android:text="@string/signup_ask_age"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/lyAnswer"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAge_slideAge"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:background="@drawable/custom_edittext_shadow"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedtAge_slideAge"
                android:layout_margin="5dp"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnNext_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyAnswer"
        android:layout_marginTop="22dp"
        android:background="@drawable/custom_button_login"
        android:text="@string/signup_button_next"
        android:textColor="#ffffff"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp" />

</RelativeLayout>