<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_newpost_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="Username"
        android:textColor="#111111"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_layout_community_newpost"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_textview_community_newpost"
            android:padding="10dp"
            android:text="@string/card_view_how_feel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPostContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top|start"
            android:hint="@string/card_view_feel_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="10dp"
            android:textSize="20sp" />
    </LinearLayout>

    <Switch
        android:id="@+id/swtPostOnlyMe"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/switch_string_onlyme"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pgb_newPost"
            android:translationZ="10dp"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/btnPostSubmit"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_button_login"
            android:text="@string/button_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>