<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_gravity="center"
    android:elevation="8dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp"
    card_view:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"

            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:src="@drawable/logo"
                android:layout_height="40dp"/>
            <TextView
                android:id="@+id/txtCurrentCounselor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/card_view_demo_counselor"
                android:textSize="20sp" />

        </LinearLayout>
        <ImageView
            android:contentDescription="@string/card_view_content"
            android:src="@drawable/image_gradient"
            android:layout_width="match_parent"
            android:padding="2dp"
            android:layout_height="200dp"/>
        <TextView
            android:id="@+id/txtCurrentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/card_view_demo_txt_title"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnCurrentJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_button_login"
            android:rating="3.5"
            android:text="@string/card_view_btn_join"
            android:textColor="#fff" />
    </LinearLayout>
</androidx.cardview.widget.CardView>