<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_cardview_activity"
        android:orientation="vertical"
        android:padding="20px">

        <TextView
            android:id="@+id/txtActivityCardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/card_view_demo_txt_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtActivityCardTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/card_view_demo_txt_time"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/rtbActivityCardRate"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:progressTint="#FFEB3B"
            android:rating="3.5"
            android:text="@string/card_view_btn_register"
            android:textColor="#fff" />
    </LinearLayout>
</androidx.cardview.widget.CardView>